--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=7373
+server.disableURLRewriting=true
 spring.thymeleaf.prefix=classpath:/static/pages/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
