新增简单日志管理切面，同时修改日志打印到文本文件的格式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.thymeleaf.cache=false
 spring.profiles.active=aeolian
 logging.level.org.wzxy.breeze.MedicalApplication=debug
 logging.file.path=H://JavaLogger/MedicalExpenseLog
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} --- %msg%n
 #½¡¿µ¼à¿Ø
 management.security.enabled=false
 ## MULTIPART (MultipartProperties)
